--- a/arch/arm/mach-s5pv210/Kconfig
+++ b/arch/arm/mach-s5pv210/Kconfig
@@ -140,6 +140,24 @@ endmenu
 
 menu "S5PV210 Machines"
 
+config MACH_MINI210
+	bool "MINI210"
+	select CPU_S5PV210
+	select S3C_DEV_HSMMC
+	select S3C_DEV_HSMMC1
+	select S3C_DEV_HSMMC2
+	select S3C_DEV_HSMMC3
+	select S3C_DEV_I2C1
+	select S3C_DEV_I2C2
+	select S3C_DEV_RTC
+	select S3C_DEV_WDT
+	select S5PV210_SETUP_I2C1
+	select S5PV210_SETUP_I2C2
+	select S5PV210_SETUP_SDHCI
+	select S5P_GPIO_INT
+	help
+	  Machine support for FriendlyARM Mini210
+
 config MACH_SMDKV210
 	bool "SMDKV210"
 	select CPU_S5PV210
