--- a/arch/arm/mach-s5pv210/Kconfig
+++ b/arch/arm/mach-s5pv210/Kconfig
@@ -143,6 +143,7 @@ menu "S5PV210 Machines"
 config MACH_MINI210
 	bool "MINI210"
 	select CPU_S5PV210
+	select S3C_DEV_FB
 	select S3C_DEV_HSMMC
 	select S3C_DEV_HSMMC1
 	select S3C_DEV_HSMMC2
@@ -153,7 +154,16 @@ config MACH_MINI210
 	select S3C_DEV_WDT
 	select S5PV210_SETUP_I2C1
 	select S5PV210_SETUP_I2C2
+	select S5PV210_SETUP_FB_24BPP
+	select S5PV210_SETUP_FIMC
 	select S5PV210_SETUP_SDHCI
+	select S5P_DEV_FIMC0
+	select S5P_DEV_FIMC1
+	select S5P_DEV_FIMC2
+	select S5P_DEV_I2C_HDMIPHY
+	select S5P_DEV_JPEG
+	select S5P_DEV_MFC
+	select S5P_DEV_TV
 	select S5P_GPIO_INT
 	help
 	  Machine support for FriendlyARM Mini210
